# graphene

./: .gitignore  CLAUDE.md  docker-compose.yml
backend/: pyproject.toml
backend/adapters/: __init__.py
backend/adapters/graph_neo4j/: __init__.py  reader.py  repository.py  writer.py
backend/adapters/importer_excel/: __init__.py  inference.py  parser.py
backend/adapters/importer_excel/tests/: test_parser.py
backend/api/: dependencies.py  main.py
backend/api/routes/: __init__.py  chat.py  graph.py  health.py  impact.py  imports.py  search.py
backend/api/schemas/: __init__.py  base.py  chat.py  enums.py  graph.py  health.py  impact.py  imports.py  search.py
backend/domain/: __init__.py  graph_ports.py  importer_ports.py  llm_ports.py
backend/domain/models/: __init__.py  badi.py  base.py  function_module.py  import_result.py  job.py  program.py  relationship.py  table.py  transport.py
backend/domain/services/: __init__.py  impact_analysis.py  import_job.py
backend/domain/services/tests/: test_impact_analysis.py
backend/domain/tests/: test_models.py
backend/scripts/: apply_constraints.py  generate_flagship_dataset.py  seed_hello_graph.py
demo-data/: flagship.xlsx
docs/: 01-product-vision.md  02-system-architecture.md  03-graph-schema.md  04-demo-bible.md  05-development-roadmap.md  06-linear-backlog.md  excel-schema.md  flagship-blast-radius.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: App.tsx  AppLayout.tsx  NavRail.tsx
(+17 files in other folders)
